--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.11",
     "nodemon": "^3.1.10",
+    "prisma": "^6.11.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@prisma/client": "6.11.1",
     "@types/cors": "^2.8.19",
     "cors": "^2.8.5",
     "dotenv": "^17.1.0",
