Implement graceful shutdown for Docker deployment
- Added signal handling for SIGTERM and SIGINT in the Express server.
- Implemented a graceful shutdown process that closes HTTP connections and database connections properly.
- Updated Dockerfile to use dumb-init for signal handling.
- Enhanced Docker Compose configuration with health checks and graceful shutdown settings.
- Created comprehensive testing scripts for graceful shutdown functionality.
- Removed outdated TESTING.md and integrated relevant testing information into the new structure.
- Added detailed documentation on Docker deployment and graceful shutdown features.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "start": "node dist/index.js",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "docker:build": "docker build -t express-server-template .",
+    "docker:run": "docker run -d --name express-app --stop-timeout 30 -p 3000:3000 express-server-template",
+    "docker:stop": "docker stop express-app && docker rm express-app",
+    "docker:test": "bash test-graceful-shutdown.sh",
+    "docker:compose:up": "docker-compose up -d",
+    "docker:compose:down": "docker-compose down"
   },
   "keywords": [],
   "author": "",
