--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,35 @@
 version: '3.8'
 
 services:
+  # App Service
   app:
-    build: .
-    ports:
-      - '3000:3000'
-
+    build:
+      context: .
+      dockerfile: Dockerfile
+    expose:
+      - '3000'
     env_file:
       - .env
-
-    # Graceful shutdown configuration
-    stop_grace_period: 30s # Time to wait for SIGTERM before sending SIGKILL
-    restart: unless-stopped
-
+    environment:
+      - NODE_ENV=production
+    stop_grace_period: 30s
+    deploy:
+      replicas: 3
+      restart_policy:
+        condition: on-failure
     healthcheck:
       test: ['CMD', 'curl', '-f', 'http://localhost:3000/health/liveness']
       interval: 30s
       timeout: 10s
       retries: 3
       start_period: 30s
+
+  # Nginx Load Balancer
+  nginx:
+    image: nginx:alpine
+    ports:
+      - '5000:5000'
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - app
